--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: '8080'
 
-
 spring:
   profiles:
     active: local
@@ -16,3 +15,20 @@ spring:
         hbm2ddl:
           auto: update
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  security:
+    user:
+      password: 'bar'
+
+logging:
+  level:
+    root: DEBUG
+    com:
+      student:
+        management: DEBUG
+
+jwt:
+  secret: "Jwt Secret"
+
+authentication:
+  username: "Vishal"
+  password: "123456"
