--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,4 +5,4 @@ spring:
   datasource:
     username: root
     password: VishalSingh1
-    url: 'jdbc:mysql://aws-database.caqc2qacqdrh.us-east-2.rds.amazonaws.com:3306/demo'
+    url: 'jdbc:mysql://aws-database.caqc2qacqdrh.us-east-2.rds.amazonaws.com:3306/student'
