--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -3,6 +3,6 @@ server:
 
 spring:
   datasource:
-    url: 'jdbc:mysql://localhost:3307/school?allowPublicKeyRetrieval=true&useSSL=false'
-    username: admin
+    url: 'jdbc:mysql://localhost:3307/student?allowPublicKeyRetrieval=true&useSSL=false'
+    username: root
     password: 123456
