--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   profiles:
     active: local
   datasource:
-    url: 'jdbc:mysql://localhost:3307/school?allowPublicKeyRetrieval=true&useSSL=false'
-    username: admin
+    url: 'jdbc:mysql://localhost:3307/student?allowPublicKeyRetrieval=true&useSSL=false'
+    username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
